Change log
==========

2.5 (unreleased)
----------------


2.4 (2019-10-23)
----------------
- attempt to hide session values that may contain passwords in ``__repr__``
  which is used when rendering the ``REQUEST`` object as string.


2.3 (2019-10-13)
----------------
- rely on the Zope 4.x branch for Python 2 compatibility

- update description to replace Zope2 wording with just Zope

- reorganize source folder structure and drop the ``src`` folder


2.2 (2019-05-21)
----------------
- add an implementation for ``has_key`` which is gone under Python 3


2.1 (2019-03-31)
----------------
- fix wrong method call during cache manager record invalidation
  (`#1 <https://github.com/dataflake/Products.mcdutils/issues/1>`_)


2.0 (2019-03-28)
----------------
- make sure ``zcache.aggregateKey`` does not create unsuitable MemCache keys

- allow storing values that don't conform to ``IMemCacheMapping``

- add ability to set a title for a MemCacheZCacheManager

- Python 3 compatibility

- switch to the ``python-memcached`` library and remove the old ``memcache``
  library module inside this package, which is actually a really old version
  of ``python-memcached``.

Possible breaking change
~~~~~~~~~~~~~~~~~~~~~~~~
The objects returned by Zope's session data manager are implicitly expected
to support Acquisition. Zope's session data manager uses it to insert itself
into the object's acquisition chain. However, under Python 3 Acquisition can
no longer be supported by the session data objects due to a metaclass conflict
between the classes ``permisstence.mapping.PersistentMapping`` and
``Acquisition.Explicit``. This may break expectations for code consuming the
session data objects from this package.


1.0 (2019-03-28)
----------------
- Zope 4 compatibility

- documentation using Sphinx

- ``tox`` configuration for unit, coverage and code quality tests

- package configuration cleanup

- full ``flake8`` compliance

- add ability to set a title for a MemcacheProxy
